// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameStart matches snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="gamestart"
      >
        <div
          class=""
          data-testid="transition-wrap"
        >
          <div
            class="absolute left-0 top-0 w-full h-screen bg-black/60"
          />
        </div>
        <div
          class="absolute left-0 top-0 w-full h-screen flex items-center justify-center"
          data-testid="transition-wrap"
        >
          <div
            class="bg-purple-900 text-white border-2 border-purple-400 rounded-lg p-4 w-full max-w-lg drop-shadow-xl"
          >
            <div
              class="grid grid-cols-4"
            >
              <div
                class="pr-2"
              >
                <div
                  class="h-full flex justify-center align-center"
                >
                  <div>
                    <img
                      alt="heads"
                      src="heads.png"
                    />
                  </div>
                </div>
              </div>
              <div
                class="col-span-3"
              >
                <div
                  class="flex justify-center items-center h-full"
                >
                  <div>
                    <h2
                      class="text-3xl text-center"
                    >
                      <i>
                        The coin toss came up 
                        heads
                        .
                      </i>
                    </h2>
                    <h3
                      class="text-xl text-center"
                    >
                      PLAYER
                       goes first this time.
                    </h3>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="text-right"
            >
              <button
                class="uppercase bg-transparent text-white border-2 border-white hover:bg-white hover:text-purple-900 rounded-md py-2 px-4 transition-all hover:scale-110 duration-300"
                data-testid="gameStart-btn-start"
              >
                Begin
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="gamestart"
    >
      <div
        class=""
        data-testid="transition-wrap"
      >
        <div
          class="absolute left-0 top-0 w-full h-screen bg-black/60"
        />
      </div>
      <div
        class="absolute left-0 top-0 w-full h-screen flex items-center justify-center"
        data-testid="transition-wrap"
      >
        <div
          class="bg-purple-900 text-white border-2 border-purple-400 rounded-lg p-4 w-full max-w-lg drop-shadow-xl"
        >
          <div
            class="grid grid-cols-4"
          >
            <div
              class="pr-2"
            >
              <div
                class="h-full flex justify-center align-center"
              >
                <div>
                  <img
                    alt="heads"
                    src="heads.png"
                  />
                </div>
              </div>
            </div>
            <div
              class="col-span-3"
            >
              <div
                class="flex justify-center items-center h-full"
              >
                <div>
                  <h2
                    class="text-3xl text-center"
                  >
                    <i>
                      The coin toss came up 
                      heads
                      .
                    </i>
                  </h2>
                  <h3
                    class="text-xl text-center"
                  >
                    PLAYER
                     goes first this time.
                  </h3>
                </div>
              </div>
            </div>
          </div>
          <div
            class="text-right"
          >
            <button
              class="uppercase bg-transparent text-white border-2 border-white hover:bg-white hover:text-purple-900 rounded-md py-2 px-4 transition-all hover:scale-110 duration-300"
              data-testid="gameStart-btn-start"
            >
              Begin
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`GameStart matches snapshot show = false 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="gamestart"
      />
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="gamestart"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
